# Puit_Couronne_DoseWater_Eur152_SourcePosition_20mm

README/07_01_2026/: Couronnes_Puit_1_08_01_2026.aux  Couronnes_Puit_1_08_01_2026.blg  Couronnes_Puit_1_08_01_2026.out  Couronnes_Puit_1_08_01_2026.tex  Couronnes_Puit_1_08_01_2026.toc
README/13_01_2026/Couronnes_Puit_3/: Couronnes_Puit_3.blg  Couronnes_Puit_3.out  README_Couronnes_Puit_3_12_01_2026
README/13_01_2026/PMMA_5mm_Water_5mm_W_20micron _DistanceSource_25mm/: methode_generation_Eu152(1).tex
README/13_01_2026/PMMA_5mm_Water_5mm_W_20micron _DistanceSource_25mm/analyse_Dose/: analyse_Dose_1.C  analyse_Dose_v2.C  analyse_dose_anneaux.tex  analyse_dose_temps.tex  analyse_figures.tex
README/13_01_2026/PMMA_5mm_Water_5mm_W_20micron _DistanceSource_25mm/analyse_absorption_raies/: analyse_absorption_raies.C  analyse_absorption_raies.tex  (+2 more)
README/15_01_2026/PMMA_5mm_Water_10mm_W_100micron _DistanceSource_25mm/: coupe_dispositif_v2.tex  tableau_positions_z.tex
README/16_01_2026/PMMA_0mm_Water_3mm-DistanceSourceEau_25mm/: CORRECTIONS_RESUME.md  analyse_Dose.C  analyse_absorption_raies.C
geant4_billes/07_02_2026/PMMA5mm_W20micron_DistanceSourceEau25mm/: CMakeLists.txt  RunAction.cc  init_vis.mac  run.mac
geant4_billes/08_02_2026/PMMA_5mm_Water_5mm_W_20micron _DistanceSourceEau_25mm/: analyze_puits_couronne.C
geant4_billes/13_01_2026/PMMA_5mm_Water_5mm_W_20micron _DistanceSource_25mm/: analyse_Dose.C  analyse_absorption_raies.C  analyse_dose_anneaux.C
geant4_billes/16_01_2026/PMMA_0mm_Water_3mm-DistanceSourceEau_25mm/: README.md  puits_couronne.cc  run.mac  vis.mac
include/: DetectorConstruction.hh  PrimaryGeneratorAction.hh  RunAction.hh
src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
(+46 files in other folders)
